Added new sunday reading for MSG

--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -11,7 +11,6 @@
   <!--Hero-->
   <section class="hero is-light has-background is-fullheight">
     <img class="hero-background is-transparent" src="../../../assets/get-involved-cover.jpg">
-    <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">Keep in touch with us to get information about events and happenings at the Newman Catholic
@@ -22,6 +21,7 @@
   </section>
   <br>
 
+  <!--Tiles-->
   <div class="section notification is-light">
     <div class="tile is-ancestor">
       <div class="tile is-parent is-vertical">
