--- a/src/app/components/sunday-reading/sunday-reading.component.html
+++ b/src/app/components/sunday-reading/sunday-reading.component.html
@@ -5,8 +5,8 @@
 
 <body onload="bodyLoad()">
   <!--Hero-->
-  <section class="hero is-light has-background is-fullheight">
-    <img class="hero-background is-transparent" src="../../../assets/home-cover.jpg">
+  <section class="hero is-grey-lighter has-background is-fullheight">
+    <img class="hero-background is-transparent" src="../../../assets/sunday-reading-cover.jpg">
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title" id="title">
