Removed target blank for social links

--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -30,7 +30,7 @@
             <p class="title"><i class="fab fa-slack fa-3x" style="color:#23D160"></i></p>
             <p class="title tile-title">Slack</p>
             <p class="card-content">Slack is the official group chat for the organization, where we discuss Catholic topics, announce events, post Catholic memes, etc. Join the conversation!</p>
-            <a href="https://bit.ly/join-ncm" target="_blank" class="button is-success is-outlined" type="submit"><i class="fab fa-slack"></i>&nbsp;Join</a>
+            <a href="https://bit.ly/join-ncm" class="button is-success is-outlined" type="submit"><i class="fab fa-slack"></i>&nbsp;Join</a>
           </div>
         </article>
         <article class="tile is-child card">
@@ -55,7 +55,7 @@
               <form
                 action="https://firebaseapp.us19.list-manage.com/subscribe/post?u=c79e5bc5c739f88ffe8e41c40&amp;id=30d661d9d5"
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_blank" novalidate>
+                novalidate>
                 <div id="mc_embed_signup_scroll">
 
                   <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
@@ -118,7 +118,7 @@
             <p class="card-content">The UTD Newman Catholic Ministry page is a way for students, alumni, parents, and
               community members to stay up to date on NCM activities and events.</p>
 
-            <a target="_blank" href="https://www.facebook.com/utdcatholic/" class="button is-link is-outlined" type="submit"><i class="far fa-thumbs-up"></i>&nbsp;Like</a>
+            <a href="https://www.facebook.com/utdcatholic/" class="button is-link is-outlined" type="submit"><i class="far fa-thumbs-up"></i>&nbsp;Like</a>
           </div>
         </article>
         <article class="tile is-child card">
