Added down arrows to the heros

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -21,12 +21,17 @@
         <h2 class="subtitle">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, reach out to Catholics on campus, and be the presence of Christ to those around us. To that purpose, we seek to sponsor events that proclaim the truths of our faith, offer opportunity for fellowship, and draw students deeper into a life of prayer, sacraments, and a relationship with Christ and His Church. We use our resources of time, talent, and treasure to promote and implement our missions and events.</h2>
       </div>
     </div>
+    <div class="hero-foot">
+        <div class="container">
+          <a href="/about-ncm#officers"><i class="fas fa-angle-down fa-2x"></i></a>
+        </div>
+      </div>
   </section>
 
   <br>
 
   <!--Officers-->
-  <div class="section notification is-light">
+  <div class="section notification is-light" id="officers">
     <p class="title is-spaced has-text-centered">Officers</p>
     <div class="tile is-ancestor">
       <div class="tile is-vertical is-parent">
