--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -14,3 +14,7 @@ body
     color: #808080
 .event-loc:hover 
     color: #c2c2c2
+.event-pic, .event-text
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
