--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -31,7 +31,7 @@
     <div class="tile is-ancestor">
       <div class="tile is-parent is-vertical">
         <article class="tile is-child card">
-          <div style="text-align:center">
+          <div class="social">
             <p class="title"><i class="fab fa-slack fa-3x" style="color:#23D160"></i></p>
             <p class="title tile-title">Slack</p>
             <p class="card-content">Slack is the official group chat for the organization, where we discuss Catholic
@@ -41,7 +41,7 @@
           </div>
         </article>
         <article class="tile is-child card">
-          <div style="text-align:center">
+          <div class="social">
             <p class="title"><i class="fab fa-mailchimp fa-3x" style="color:#FFDD57"></i></p>
             <p class="title tile-title">MailChimp</p>
             <p class="card-content">Sign up for the mailing list to receive information about events.</p>
@@ -120,7 +120,7 @@
 
       <div class="tile is-parent is-vertical">
         <article class="tile is-child card">
-          <div style="text-align:center">
+          <div class="social">
             <p class="title"><i class="fab fa-facebook fa-3x" style="color:#3273DC"></i></p>
             <p class="title tile-title">Facebook</p>
             <p class="card-content">The UTD Newman Catholic Ministry page is a way for students, alumni, parents, and
@@ -131,7 +131,7 @@
           </div>
         </article>
         <article class="tile is-child card">
-          <div style="text-align:center">
+          <div class="social">
             <p class="title"><i class="fab fa-instagram fa-3x" style="color:#FF3860"></i></p>
             <p class="title tile-title">Instagram</p>
             <p class="card-content">See all of our past events on our Instagram page!</p>
@@ -140,7 +140,7 @@
           </div>
         </article>
         <article class="tile is-child card">
-          <div style="text-align:center">
+          <div class="social">
             <p class="title"><i class="fas fa-envelope fa-3x" style="color:#00D1B2"></i></p>
             <p class="title tile-title">E-mail</p>
             <p class="card-content">Have any further questions? Want to reach out to our student organization? E-mail
