Modified smooth scrolling

--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="hero-foot">
       <div class="container">
-        <a href="/get-involved#social"><i class="fas fa-angle-down fa-2x"></i></a>
+        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
       </div>
     </div>
   </section>
