--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="hero-foot">
       <div class="container">
-        <a href="/about-ncm#officers"><i class="fas fa-angle-down fa-2x"></i></a>
+        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
       </div>
     </div>
   </section>
