--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="hero-foot">
       <div class="container">
-        <a href="#links"><i class="fas fa-angle-down fa-2x"></i></a>
+        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
       </div>
     </div>
   </section>
