--- a/src/app/components/support-ncm/support-ncm.component.html
+++ b/src/app/components/support-ncm/support-ncm.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="hero-foot">
       <div class="container">
-        <a href="/support-ncm#support"><i class="fas fa-angle-down fa-2x"></i></a>
+        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
       </div>
     </div>
   </section>
