Replaced down arrows with buttons

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -23,11 +23,7 @@
           purpose, we seek to sponsor events that proclaim the truths of our faith, offer opportunity for fellowship,
           and draw students deeper into a life of prayer, sacraments, and a relationship with Christ and His Church. We
           use our resources of time, talent, and treasure to promote and implement our missions and events.</h2>
-      </div>
-    </div>
-    <div class="hero-foot">
-      <div class="container">
-        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
+          <button class="button is-white is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Meet the Officers</button>
       </div>
     </div>
   </section>
