--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -13,7 +13,7 @@ body
 .event-loc, .event-loc:visited 
     color: #808080
 .event-loc:hover 
-    color: #c2c2c2
+    color: #FFDD57
 .event-pic
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
