--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -16,11 +16,7 @@
         <h1 class="title">Keep in touch with us to get information about events and happenings at the Newman Catholic
           Ministry.
         </h1>
-      </div>
-    </div>
-    <div class="hero-foot">
-      <div class="container">
-        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
+        <button class="button is-dark is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Keep in Touch</button>
       </div>
     </div>
   </section>
