--- a/src/app/components/support-ncm/support-ncm.component.html
+++ b/src/app/components/support-ncm/support-ncm.component.html
@@ -15,11 +15,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">In order to continue its mission, Newman Catholic Ministry needs your support.</h1>
-      </div>
-    </div>
-    <div class="hero-foot">
-      <div class="container">
-        <a class="overflow"><i class="fas fa-angle-down fa-2x"></i></a>
+        <button class="button is-light is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Support Us</button>
       </div>
     </div>
   </section>
