--- a/src/app/components/support-ncm/support-ncm.component.sass
+++ b/src/app/components/support-ncm/support-ncm.component.sass
@@ -16,12 +16,7 @@ body
     height: 100%
     &.is-transparent 
       opacity: 0.3
-.hero-foot
-  text-align: center
-.fa-angle-down:hover
-  color: #d6d6d6
-.fa-angle-down
-  color: white
+.overflow
   transition: 0.3s
-.hero-foot
-  padding-bottom: 48px
+  font-family: 'Rubik', sans-serif
+  
