--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -40,15 +40,11 @@ body
   object-fit: cover
 .hero-foot
   text-align: center
-.fa-angle-down:hover
-  color: #d6d6d6
-.fa-angle-down
-  color: white
+.overflow
   transition: 0.3s
+  font-family: 'Rubik', sans-serif
 @media screen and (min-width: 768px) 
   .officer
       position: relative
       top: 50%
       transform: translateY(-50%)
-.hero-foot
-  padding-bottom: 48px
