--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -23,13 +23,9 @@ body
     height: 100%
     &.is-transparent 
       opacity: 0.3
-.hero-foot
-  text-align: center
-.fa-angle-down:hover
-  color: #d6d6d6
-.fa-angle-down
-  color: white
+.overflow
   transition: 0.3s
+  font-family: 'Rubik', sans-serif
 .social
   text-align: center
 @media screen and (min-width: 768px) 
@@ -37,5 +33,3 @@ body
     position: relative
     top: 50%
     transform: translateY(-50%)
-.hero-foot
-  padding-bottom: 48px
