--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -131,7 +131,7 @@
             <p class="title"><i class="fab fa-instagram fa-3x" style="color:#FF3860"></i></p>
             <p class="title tile-title">Instagram</p>
             <p class="card-content">See all of our past events on our Instagram page!</p>
-            <a target="_blank" href="https://instagram.com/ncm_utd/" class="button is-danger is-outlined"
+            <a href="https://instagram.com/ncm_utd/" class="button is-danger is-outlined"
               type="submit"><i class="fas fa-camera-retro"></i>&nbsp;Follow</a>
           </div>
         </article>
