Finished support us page

--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -1,6 +1,6 @@
 body
   font-family: 'Rubik', sans-serif
-.tile-title, .subtitle, .card-content, .button 
+.tile-title, .subtitle, .card-content, .button, .social
   text-align: center
 .tile-title
   font-size: 24px
@@ -26,8 +26,6 @@ body
 .overflow
   transition: 0.3s
   font-family: 'Rubik', sans-serif
-.social
-  text-align: center
 @media screen and (min-width: 768px) 
   .social
     position: relative
