Added Google Pay to support page

--- a/src/app/components/support-ncm/support-ncm.component.sass
+++ b/src/app/components/support-ncm/support-ncm.component.sass
@@ -30,12 +30,19 @@ body
     position: relative
     top: 50%
     transform: translateY(-50%)
+.button
+  transition: 0.3s
 .venmo
     fill: #3d95ce
+.gpay.button
+    color: #DB4437
+    border-color: #DB4437
+.gpay.button:hover
+    background-color: #DB4437
+    color: white
 .venmo.button
     color: #3d95ce 
     border-color: #3d95ce 
-    transition: 0.3s
 .venmo.button:hover
     background-color: #3d95ce
     color: white
