Update Google Pay

--- a/src/app/components/support-ncm/support-ncm.component.html
+++ b/src/app/components/support-ncm/support-ncm.component.html
@@ -61,7 +61,7 @@
           <div class="support">
             <img src="https://lh6.ggpht.com/fb0qP5ODKfgiNCeAOKg7cbazfaTPYV-m_My77HRNOe661X8a6F1xeLhj2aCxIb7U3zMv4Ie6" width="150px">
             <p class="card-content">If you have an Android smartphone or a Google account, you can support us through
-              Google Pay!</p>
+              Google Pay.</p>
             <br>
             <a href="https://pay.google.com/payments/u/0/home?p2p_action=send" class="button is-outlined gpay" type="submit">
               <i class="fab fa-google"></i>
