Added Kalebtina's headshot

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -23,7 +23,8 @@
           purpose, we seek to sponsor events that proclaim the truths of our faith, offer opportunity for fellowship,
           and draw students deeper into a life of prayer, sacraments, and a relationship with Christ and His Church. We
           use our resources of time, talent, and treasure to promote and implement our missions and events.</h2>
-          <button class="button is-white is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Meet the Officers</button>
+        <button class="button is-white is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Meet the
+          Officers</button>
       </div>
     </div>
   </section>
@@ -119,6 +120,10 @@
       <div class="tile is-vertical is-parent">
         <article class="tile is-child card">
           <div class="officer">
+            <div class="crop-image">
+              <img src="../../../assets/officer-pics/kalebtina-asare.jpg" alt="WSG Chair" class="officer-pic">
+            </div>
+            <br>
             <p class="title tile-title">Kalebtina Asare-Frimpong</p>
             <p class="subtitle">WSG Chair</p>
           </div>
