--- a/src/app/components/support-ncm/support-ncm.component.html
+++ b/src/app/components/support-ncm/support-ncm.component.html
@@ -57,7 +57,7 @@
               &nbsp;Support</a>
           </div>
         </article>
-        <article class="tile is-child card">
+        <article class="tile is-child card" style="display: none;">
           <div class="support">
             <img src="https://lh6.ggpht.com/fb0qP5ODKfgiNCeAOKg7cbazfaTPYV-m_My77HRNOe661X8a6F1xeLhj2aCxIb7U3zMv4Ie6" width="150px">
             <p class="card-content">If you have an Android smartphone or a Google account, you can support us through
