Trying a new font for website, updated local Angular cli

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
     <meta name="viewport" content="width: device-width, initial-scale=1">
     <script src="./navbar/nav-burger.js"></script>
 </head>
