--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -1,5 +1,5 @@
 body
-    font-family: 'Rubik', sans-serif
+    font-family: 'Cabin', sans-serif
 .is-event-header
     font-size: 24px
     font-weight: bold
