Revert "Trying a new font for website, updated local Angular cli"
This reverts commit efc269c2f4a0177269063a81d765fe9a7d582dcf.

--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -1,5 +1,5 @@
 body
-    font-family: 'Cabin', sans-serif
+    font-family: 'Rubik', sans-serif
 .is-event-header
     font-size: 24px
     font-weight: bold
