--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -1,5 +1,5 @@
 body
-  font-family: 'Cabin', sans-serif
+  font-family: 'Rubik', sans-serif
 .tile-title, .subtitle, .card-content, .button, .social
   text-align: center
 .tile-title
