--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -1,5 +1,5 @@
 body
-  font-family: 'Cabin', sans-serif
+  font-family: 'Rubik', sans-serif
 .tile-title, .subtitle 
   text-align: center
 .tile-title
