--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,9 +1,15 @@
 <!--FontAwesome Icons-->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+/>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width: device-width, initial-scale=1">
+  <link
+    href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+    rel="stylesheet"
+  />
+  <meta name="viewport" content="width: device-width, initial-scale=1" />
 </head>
 
 <body class="has-navbar-fixed-top">
@@ -13,32 +19,76 @@
   <div class="container">
     <div class="section notification is-light">
       <p class="title is-spaced has-text-centered">Upcoming Events</p>
-      <br>
+      <br />
 
       <div class="box" id="eventTmpl">
         <div class="columns">
           <div class="column has-text-centered">
-            <img class="event-pic"
+            <img
+              class="event-pic"
               src="https://aleteiaen.files.wordpress.com/2016/05/web-eucharist-host-chalice-communion-sebastian-duda-shutterstock_217229680.jpg?quality=100&strip=all&w=620&h=310&crop=1"
-              width="75%" height="75%">
+              width="75%"
+              height="75%"
+            />
           </div>
           <div class="column">
             <div class="event-text">
-              <p class="event-title heading is-event-header has-text-centered">Event</p>
-              <br>
-              <p class="event-desc has-text-centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <br>
-              <p class="event-date heading is-event-footer has-text-centered"><i class="fas fa-calendar-alt"></i>
-                December
-                25, 2019 @ 8-9 pm</p>
-              <a class="event-loc heading is-event-footer has-text-centered" style="text-decoration:none"
-                href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"><i
-                  class="fas fa-map-marker-alt"></i>Residence Hall West</a>
+              <p class="event-title heading is-event-header has-text-centered">
+                Event
+              </p>
+              <br />
+              <p class="event-desc has-text-centered">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <br />
+              <p class="event-date heading is-event-footer has-text-centered">
+                <i class="fas fa-calendar-alt"></i> December 25, 2019 @ 8-9 pm
+              </p>
+              <a
+                class="event-loc heading is-event-footer has-text-centered"
+                style="text-decoration:none"
+                href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"
+                ><i class="fas fa-map-marker-alt"></i>Residence Hall West</a
+              >
             </div>
           </div>
         </div>
       </div>
 
+      <div id="monthly_cal" class="columns" style="justify-content: center">
+        <div class="column has-text-centered">
+          <button
+            id="monthly_cal_button"
+            class="button is-warning modal-button is-rounded"
+            style="font-family: 'Rubik', sans-serif"
+          >
+            View monthly calendar
+          </button>
+        </div>
+      </div>
+      <div id="monthly_cal_modal" class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="modal-card-title has-text-centered">
+              NCM Monthly Calendar
+            </p>
+            <button
+              id="mon_cal_modal_close"
+              class="delete"
+              aria-label="close"
+            ></button>
+          </header>
+          <section class="modal-card-body" style="height: 1000px !important">
+            <iframe
+              src="https://calendar.google.com/calendar/embed?src=u7pfc7n8eaieq4ipginsdn9crk%40group.calendar.google.com&ctz=America%2FChicago"
+              style="border: 0; width: 800px; height:600px"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
+          </section>
+        </div>
+      </div>
     </div>
   </div>
   <!--Footer-->
