--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -82,9 +82,7 @@
           <section class="modal-card-body" style="height: 1000px !important">
             <iframe
               src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=dTdwZmM3bjhlYWllcTRpcGdpbnNkbjljcmtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D50000&amp;showTitle=0"
-              style="border-width:0"
-              width="800"
-              height="600"
+              style="border: 0; width: 800px; height:600px"
               frameborder="0"
               scrolling="no"
             ></iframe>
