Change close button modal

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -73,11 +73,7 @@
             <p class="modal-card-title has-text-centered">
               NCM Monthly Calendar
             </p>
-            <button
-              id="mon_cal_modal_close"
-              class="delete"
-              aria-label="close"
-            ></button>
+            <i id="mon_cal_modal_close" class="fas fa-times"></i>
           </header>
           <section class="modal-card-body" style="height: 1000px !important">
             <iframe
