Changed close button modal

--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -24,3 +24,7 @@ body
         position: relative
         top: 50%
         transform: translateY(-50%)
+#mon_cal_modal_close
+    transition: 0.3s
+#mon_cal_modal_close:hover
+    color: #bebebe
