--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -70,6 +70,7 @@
         <div class="modal-background"></div>
         <div class="modal-card">
           <header class="modal-card-head">
+              <i class="fas fa-calendar"></i>
             <p class="modal-card-title has-text-centered">
               NCM Monthly Calendar
             </p>
