Updated event descriptions and moved cover photos

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -10,7 +10,7 @@
 
   <!--Hero with header and footer-->
   <section class="hero is-info is-bold is-fullheight has-background">
-    <img class="hero-background is-transparent" src="../../../assets/about-ncm-cover.jpg">
+    <img class="hero-background is-transparent" src="../../../assets/page-covers/about-ncm-cover.jpg">
     <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
