--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
 
   <!--Hero-->
   <section class="hero is-warning is-fullheight has-background">
-    <img class="hero-background is-transparent" src="../../../assets/home-cover.jpg">
+    <img class="hero-background is-transparent" src="../../../assets/page-covers/home-cover.jpg">
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">He is waiting for you when nothing else you find satisfies you.</h1>
