Added Newman Connection link

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,7 @@
 <div class="content has-text-centered">
     <p>
         Built with ❤️ by the <strong>Newman Catholic Ministry</strong> officers at UT Dallas. 
-        <a href="https://github.com/nich227/ncm-utd" target="_blank" style="color: #000000"><br><i class="fab fa-github"></i></a>
+        <a href="https://github.com/nich227/ncm-utd" target="_blank" style="color: #000000"><br><i class="fab fa-github"></i></a>&nbsp;|&nbsp;
+        <a href="http://www.newmanconnection.com/" target="_blank" style="color: #000000">Newman Connection</a>
     </p>
 </div>
