Made subtle visual changes to website

--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -1,5 +1,9 @@
 body
     font-family: 'Rubik', sans-serif
+.button
+    transition: 0.3s
+.title
+    font-size: 36px
 .is-event-header
     font-size: 24px
     font-weight: bold
