--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,10 +2,14 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
 
 <!--Footer-->
-<div class="content has-text-centered">
+<div class="notification has-text-centered">
     <p>
         Built with ❤️ by the <strong>Newman Catholic Ministry</strong> officers at UT Dallas. 
-        <a href="https://github.com/nich227/ncm-utd" target="_blank" style="color: #000000"><br><i class="fab fa-github"></i></a>&nbsp;|&nbsp;
-        <a href="http://www.newmanconnection.com/" target="_blank" style="color: #000000">Newman Connection</a>
+        &copy; 2019
+        <a href="https://github.com/nich227/ncm-utd" target="_blank" style="color: #000000"><br><i class="fab fa-github"></i></a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a id="newman-link" href="http://www.newmanconnection.com/" target="_blank" style="color: #000000">Newman Connection</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="http://www.usccb.org/"><img id="utd-logo" src="../../../assets/usccb.ico"></a>
     </p>
 </div>
