--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -1,2 +1,12 @@
 body
   font-family: 'Rubik', sans-serif
+.notification
+  background-color: white
+  -webkit-box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.11)
+  -moz-box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.11)
+  box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.11)
+  padding: 20px 
+#utd-logo
+  height: 16px
+#newman-link
+  text-decoration: none
