--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -1,5 +1,7 @@
 body
   font-family: 'Rubik', sans-serif
+.section
+  margin: 0px
 .tile-title, .subtitle, .card-content, .button, .social
   text-align: center
 .tile-title
