Changed slack join link

--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -31,7 +31,7 @@
             <p class="title tile-title">Slack</p>
             <p class="card-content">Slack is the official group chat for the organization, where we discuss Catholic
               topics, announce events, post Catholic memes, etc. Join the conversation!</p>
-            <a href="https://bit.ly/join-ncm" class="button is-success is-outlined" type="submit"><i
+            <a href="https://ncm-utd.slack.com/signup" class="button is-success is-outlined" type="submit"><i
                 class="fab fa-slack"></i>&nbsp;Join</a>
           </div>
         </article>
