Changed alts of officer images

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -87,7 +87,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/josh-guzman.png" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/josh-guzman.png" alt="Service Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Josh Guzman</p>
@@ -107,7 +107,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/summer-brown.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/summer-brown.jpg" alt="Outreach Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Summer Brown</p>
@@ -129,7 +129,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/montgomery-flores.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/montgomery-flores.jpg" alt="MSG Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Montgomery Flores</p>
@@ -139,7 +139,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/priyanka-prem.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/priyanka-prem.jpg" alt="Media Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Priyanka Prem</p>
@@ -149,7 +149,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Transportation Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Kaitlin Colby</p>
@@ -159,7 +159,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="Sports Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Preston Glenn</p>
@@ -169,7 +169,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Music Ministry Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Ike Ekwueme</p>
@@ -179,7 +179,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/joseph-krueger.jpg" alt="Tech Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/joseph-krueger.jpg" alt="KoC Liaison" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Joseph Krueger</p>
