--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,10 +6,13 @@
     <p>
         Built with ❤️ by the <strong>Newman Catholic Ministry</strong> officers at UT Dallas. 
         &copy; 2019
-        <a href="https://github.com/nich227/ncm-utd" target="_blank" style="color: #000000"><br><i class="fab fa-github"></i></a>
+        <br>
+        <a href="https://github.com/nich227/ncm-utd" target="_blank"><br><i class="fab fa-github"></i></a>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a id="newman-link" href="http://www.newmanconnection.com/" target="_blank" style="color: #000000">Newman Connection</a>
+        <a id="newman-link" href="http://www.newmanconnection.com/" target="_blank"><img id="footer-logo" src="../../../assets/logos/newman-connect.png"></a>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="http://www.usccb.org/"><img id="utd-logo" src="../../../assets/usccb.ico"></a>
+        <a href="http://www.usccb.org/"><img id="footer-logo" src="../../../assets/logos/usccb.ico"></a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="http://www.utdallas.edu/"><img id="footer-logo" src="../../../assets/logos/utd-logo.ico"></a>
     </p>
 </div>
