--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -6,7 +6,5 @@ body
   -moz-box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.11)
   box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.11)
   padding: 20px 
-#utd-logo
+#footer-logo
   height: 16px
-#newman-link
-  text-decoration: none
