--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://newmanutd.org">
-      <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
+      <img src="../../../assets/logos/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
     </a>
 
     <a (click)="toggleNavbar()" role="button" #navBurger class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
