Added a store to NCM webpage

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
     rel="stylesheet"
   />
-  <meta name="viewport" content="width: device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body class="has-navbar-fixed-top">
