--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width: device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="has-navbar-fixed-top">
@@ -34,8 +34,8 @@
         </a>
       </article>
       <article class="tile is-child notification is-danger">
-        <a routerLink="/support-ncm" style="text-decoration: none">
-          <p class="title tile-title">Support Us</p>
+        <a routerLink="/store" style="text-decoration: none">
+          <p class="title tile-title">Store</p>
         </a>
       </article>
     </div>
