--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,8 @@
     <div class="navbar-start">
       <a routerLink="/" class="navbar-item">Home</a>
       <a routerLink="/events" class="navbar-item">Events</a>
-      <a routerLink="/support-ncm" class="navbar-item">Support Us</a>
+      <a routerLink="/support-ncm" class="navbar-item">Support Us</a>      
+      <a routerLink="/store" class="navbar-item">Store</a>  
       <a routerLink="/get-involved" class="navbar-item">Get Involved</a>
       <a routerLink="/about-ncm" class="navbar-item">About Us</a>
     </div>
