--- a/src/app/components/support-ncm/support-ncm.component.html
+++ b/src/app/components/support-ncm/support-ncm.component.html
@@ -1,6 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width: device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="has-navbar-fixed-top">
