Added NCM shirt to website

--- a/src/app/components/store/store.component.html
+++ b/src/app/components/store/store.component.html
@@ -27,7 +27,7 @@
             <div class="tile is-child box is-3 item">
               <p class="title">T-Shirt</p>
               <img class="item-img"
-                src="https://tfkru2exl1c11xfih48h8lmg6y-wpengine.netdna-ssl.com/wp-content/uploads/2018/08/image-coming-soon.jpg"
+                src="../../../assets/store/ncmshirt.jpg"
               />
               <p>$10</p>
               <br>
