--- a/src/app/components/store/store.component.html
+++ b/src/app/components/store/store.component.html
@@ -24,14 +24,31 @@
         </h1>
         <div class="tile is-ancestor">
           <div class="tile is-vertical is-parent">
-            <div class="tile is-child box is-3 item">
+            <div class="tile is-child box item">
               <p class="title">T-Shirt</p>
-              <img class="item-img"
-                src="../../../assets/store/ncmshirt.jpg"
-              />
-              <p>$10</p>
-              <br>
-              <button onclick="window.location='https:\/\/docs.google.com/forms/d/e/1FAIpQLSdtFhp7zoDLx86NfgyMcdcyNmso9-fs0phnKNF5k61HL8G9Ug/viewform';" class="button is-link is-outlined overflow"><i class="fas fa-shopping-bag"></i>&nbsp;Buy</button>
+              <img class="item-img" src="../../../assets/store/ncmshirt.jpg" />
+              <p>Price: $10</p>
+              <br />
+              <button
+                onclick="window.location='https:\/\/docs.google.com/forms/d/e/1FAIpQLSdtFhp7zoDLx86NfgyMcdcyNmso9-fs0phnKNF5k61HL8G9Ug/viewform';"
+                class="button is-link is-outlined overflow"
+              >
+                <i class="fas fa-shopping-bag"></i>&nbsp;Buy
+              </button>
+            </div>
+          </div>
+          <div class="tile is-vertical is-parent">
+            <div class="tile is-child box item" style="display: none;">
+              <p class="title">T-Shirt</p>
+              <img class="item-img" src="../../../assets/store/ncmshirt.jpg" />
+              <p>Price: $10</p>
+              <br />
+              <button
+                onclick="window.location='https:\/\/docs.google.com/forms/d/e/1FAIpQLSdtFhp7zoDLx86NfgyMcdcyNmso9-fs0phnKNF5k61HL8G9Ug/viewform';"
+                class="button is-link is-outlined overflow"
+              >
+                <i class="fas fa-shopping-bag"></i>&nbsp;Buy
+              </button>
             </div>
           </div>
         </div>
